SRFCMSAL-2427 Fixes wrong spacing svg-icon
SRFCMSAL-2427

--- a/source/_patterns/10-atoms/indicators/teaser-label.scss
+++ b/source/_patterns/10-atoms/indicators/teaser-label.scss
@@ -94,7 +94,7 @@
     margin: 2px 4px 0 0;
   }
 
-  .svg-icon--tiny-but-small-on-desktop-up {
+  .svg-icon--tiny-but-small-on-tablet-up {
     @include smartphone {
       margin: 1px 4px 0 0;
     }
